# determined_batch_submit

./: .gitignore  .gitmodules  README.md  pyproject.toml
cfg/: materialize_lafan1_rollouts_vae_batch_reboot_v2_monolith.yaml  rebuild_lafan1_rollouts_vae_batch_reboot_v2.yaml  rebuild_lafan1_rollouts_vae_batch_reboot_v2_mp8_96cpu.yaml  train_meanflow_reboot_v2_hdf5_vds_1gpu.yaml  train_meanflow_reboot_v2_hdf5_vds_8gpu.yaml
cfg/examples/: basic_experiment.yaml  toy_matrix_loop_6000ada.yaml
scripts/data/: convert_rollouts_to_hdf5.py  materialize_reboot_v2_vds_to_hdf5.py  rebuild_reboot_v2_from_npz_pool.py  rebuild_reboot_v2_from_rollout_hdf5.py
scripts/examples/: submit_directory.py
scripts/examples/toy_example/: train.py
skills/intensive-compute-runner/: SKILL.md
skills/intensive-compute-runner/agents/: openai.yaml
skills/intensive-compute-runner/references/: determined-batch-snippets.md
src/determined_batch/: __init__.py  cli.py  submission.py
src/determined_batch/core/: __init__.py  api_client.py
src/determined_batch/domain/: __init__.py  experiment.py  resource_pool.py
src/determined_batch/services/: __init__.py  experiment_service.py  resource_pool_service.py
src/determined_batch/utils/: __init__.py  formatting.py  secrets.py
upstream/: README.md  api.swagger.json
